@@ -38,6 +38,7 @@ Version 2.5.0
 * Allow guardNS = 0 --> mpifxcorr choses the smallest reasonable value
 * Allow strideLength = 0 --> mpifxcorr chooses a pretty good value for you (per datastream)
 * Allow xmacLength = 0 -> mpifxcorr chooses a pretty good value for you
+* Don't allow changing from or to VDIF format with the .v2d file since channel order is defined differently for these two types.
 
 Version 2.4.0
 ~~~~~~~~~~~~~
